--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,13 +3,8 @@ setw -g mouse on
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dracula/tmux'
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark'
 set -s default-terminal 'tmux-256color'
-
-# dracula customizations
-set -g @dracula-plugins "weather time"
-set -g @dracula-show-powerline true
-set -g @dracula-show-farenheit true
-set -g @dracula-military-time true
 
 run '~/.tmux/plugins/tpm/tpm'
