add some QOL changes for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,12 @@
+# add 'C-a' as a prefix, will remove 'C-b' if it works out well
+set-option -g prefix C-a
+bind-key C-a send-prefix
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+
 setw -g mouse on
+set -g renumber-windows on
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
