--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -182,7 +182,7 @@ font:
   #builtin_box_drawing: true
 
 # If `true`, bold text is drawn using the bright color variants.
-draw_bold_text_with_bright_colors: false
+colors.draw_bold_text_with_bright_colors: false
 
 # Colors (Gruvbox Dark)
 colors:
