--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,5 +1,5 @@
 [colors]
-colors.draw_bold_text_with_bright_colors = false
+#colors.draw_bold_text_with_bright_colors = false
 
 [colors.bright]
 black = "0x928374"
