--- a/.gitconfig
+++ b/.gitconfig
@@ -6,4 +6,10 @@
 [init]
     defaultBranch = main
 [push]
-	autoSetupRemote = true
+    autoSetupRemote = true
+[credential "https://github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
